--- a/test.html
+++ b/test.html
@@ -27,17 +27,18 @@
         </style>
         
 </head>
+<script src="/APIs/userPosition.js"></script>
+<script src="/APIs/localStorage.js"></script>
 
 <body>
     <h1>Hello World!</h1>
-    <script src="test.js"></script>
-
+    <!-- <script src="test.js"></script> -->
     <h1>Registered Employees</h1>
 
     <!-- table for showing data -->
 
     <table id="employees"></table>
-
+    <p id="mapHolder"></p>
     
 
 </body>
